--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:id="@+id/loginTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -20,6 +21,30 @@
             android:textColor="@color/black"
             android:textSize="30sp"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/steamIdInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            app:layout_constraintBottom_toTopOf="@id/loginButton"
+            app:layout_constraintTop_toBottomOf="@+id/loginTitleTextView">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/steamIdEditView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter your steam id" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="16dp"
+            android:text="log in"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/steamIdInputLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
