--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,17 +17,23 @@
             android:id="@+id/loginTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:gravity="center"
-            android:text="LOGIN"
+            android:text="@string/fragment_login_log_in"
+            android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/steamIdInputLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            app:boxStrokeColor="@color/secondary_orange_dark"
+            app:boxStrokeWidth="2dp"
             app:layout_constraintBottom_toTopOf="@id/loginButton"
             app:layout_constraintTop_toBottomOf="@+id/loginTitleTextView">
 
@@ -34,7 +41,8 @@
                 android:id="@+id/steamIdEditView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter your steam id" />
+                android:hint="@string/login_fragment_hint"
+                tools:text="aaa" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
@@ -42,7 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="16dp"
-            android:text="log in"
+            android:backgroundTint="@color/secondary_orange"
+            android:text="@string/fragment_login_log_in"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/steamIdInputLayout" />
 
