--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="main_gray">#455a64</color>
+    <color name="main_gray_light">#718792</color>
+    <color name="main_gray_dark">#1c313a</color>
+    <color name="secondary_orange">#dd2c00</color>
+    <color name="secondary_orange_light">#ff6434</color>
+    <color name="secondary_orange_dark">#a30000</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
