--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,6 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/login_fragment_hint"
+                android:text="@={vm.nickname}"
                 tools:text="aaa" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -51,6 +52,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="16dp"
             android:backgroundTint="@color/secondary_orange"
+            android:onClick="@{() -> vm.logIn()}"
             android:text="@string/fragment_login_log_in"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/steamIdInputLayout" />
