--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -85,5 +85,20 @@
             android:text="@string/log_out"
             app:layout_constraintBottom_toBottomOf="parent" />
 
+        <androidx.constraintlayout.widget.Group
+            isVisible="@{vm.isDataLoadingEnded}"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:constraint_referenced_ids="accountCreatedTextView,lastLoggedTextView,nicknameTextView,steamIdTextView,logoutButton,userAvatarImageView" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            isVisible="@{!vm.isDataLoadingEnded}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
