Daniel: added recyclerView

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -38,7 +38,7 @@
             app:layout_constraintTop_toBottomOf="@+id/loginTitleTextView">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/steamIdEditView"
+                android:id="@+id/steamIdEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/login_fragment_hint"
