--- a/app/src/main/res/layout/item_game_main_page.xml
+++ b/app/src/main/res/layout/item_game_main_page.xml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:background="@color/main_gray_light">
+<layout>
 
-    <ImageView
-        android:id="@+id/gameImageView"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/steam_no_avatar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/desc_game_wrapper" />
+    <data>
 
-    <TextView
-        android:id="@+id/gameNameTextView"
-        android:layout_width="0dp"
+        <variable
+            name="vm"
+            type="com.dandelion.gamereco.fragments.main.GameItemVM" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textColor="@color/main_gray_dark"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/gameImageView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Half Life 2" />
+        android:layout_marginTop="8dp"
+        android:background="@color/main_gray_light">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/gameImageView"
+            imageUrl="@{vm.gameImageUrl}"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:contentDescription="@string/desc_game_wrapper"
+            android:scaleType="centerCrop"
+            android:src="@drawable/steam_no_avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/gameNameTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@{vm.gameTitle}"
+            android:textColor="@color/main_gray_dark"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/gameImageView"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Half Life 2" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
