--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -27,6 +27,17 @@
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/popularGamesButton"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
+            android:onClick="@{() -> vm.moveToPopularGames()}"
+            android:text="@string/view_popular_games"
+            app:icon="@drawable/ic_statistics"
+            app:layout_constraintTop_toBottomOf="@id/pageTitleTextView" />
+
         <ProgressBar
             android:id="@+id/progressBar"
             isVisible="@{!vm.isDataLoadingEnded}"
@@ -51,7 +62,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pageTitleTextView">
+            app:layout_constraintTop_toBottomOf="@id/popularGamesButton">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/friendsRecyclerView"
