--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -53,7 +53,7 @@
             isVisible="@{vm.isDataLoadingEnded}"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:constraint_referenced_ids="friendsScrollView" />
+            app:constraint_referenced_ids="friendsScrollView,popularGamesButton" />
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/friendsScrollView"
