--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -115,13 +115,25 @@
             app:icon="@drawable/ic_friends"
             app:layout_constraintTop_toBottomOf="@id/userAvatarImageView" />
 
+        <TextView
+            android:id="@+id/yourGamesTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/favourite_games"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/friendListButton" />
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/friendListButton">
+            app:layout_constraintTop_toBottomOf="@id/yourGamesTextView">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/gamesRecyclerView"
